--- a/InvoiceManager/Views/Home/Invoice.cshtml
+++ b/InvoiceManager/Views/Home/Invoice.cshtml
@@ -26,6 +26,8 @@
     <div class="col-lg-6">
         @using (Html.BeginForm("Invoice", "Home"))
         {
+            //@Html.ValidationSummary()
+
             if (Model.Invoice.Id == 0)
             {
                 <p class="alert alert-info mt-4 mb-4">
@@ -35,11 +37,13 @@
             }
 
             @Html.HiddenFor(x => x.Invoice.Id)
+            @Html.HiddenFor(x => x.Invoice.UserId)
 
             <div class="mb-3">
                 @Html.LabelFor(x => x.Invoice.Title)
                 @Html.TextBoxFor(x => x.Invoice.Title,
                new { @class = "form-control", autofocus = "autofocus" })
+                @Html.ValidationMessageFor(x => x.Invoice.Title)
             </div>
 
             <div class="mb-3">
@@ -48,6 +52,7 @@
                new SelectList(Model.Clients, "Id", "Name"),
                "-- Wybierz klienta --",
                new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Invoice.ClientId)
             </div>
 
             if (Model.Invoice.Id != 0)
@@ -65,24 +70,28 @@
                new SelectList(Model.MethodOfPayments, "Id", "Name"),
                "-- Wybierz sposób płatności --",
                new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Invoice.MethodOfPaymentId)
             </div>
 
             <div class="mb-3">
                 @Html.LabelFor(x => x.Invoice.PaymentDate)
                 @Html.TextBoxFor(x => x.Invoice.PaymentDate,
                "{0:dd-MM-yyyy}",
+
                new
                     {
                         @class = "form-control",
                    @id = "PaymentDate",
                    autocomplete = "off"
                     })
+                @Html.ValidationMessageFor(x => x.Invoice.PaymentDate)
             </div>
 
             <div class="mb-3">
                 @Html.LabelFor(x => x.Invoice.Comments)
                 @Html.TextAreaFor(x => x.Invoice.Comments,
                new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Invoice.Comments)
             </div>
 
             <button class="btn btn-primary btn-lg mb-5" type="submit">
@@ -145,8 +154,22 @@
 
         $(document).ready(function () {
 
+            $.validation.methods.number = function (value, element) {
+                return this.optional(element) || /^-?(?:\d=|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+            }
+
+            $.validator.methods.date = function (value, element) {
+                var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+                if (isChrome) {
+                    var d = new Date();
+                    return this.optional(element) || !/Invalid|Nan/.test(new Date(d.toLocaleDateString(value)));
+                } else {
+                    return this.optional(element) || !/Invalid|Nan/.test(new Date(value));
+                }
+            };
+
             $('#PaymentDate').datepicker({
-                format: "dd-MM-yyyy",
+                format: "dd-mm-yyyy",
                 language: "pl",
                 multidate: false,
                 autoclose: true,
