--- a/InvoiceManager/Views/Home/InvoicePosition.cshtml
+++ b/InvoiceManager/Views/Home/InvoicePosition.cshtml
@@ -16,40 +16,59 @@
         </p>
     }
 
-        @Html.HiddenFor(x => x.InvoicePosition.Id)
-        @Html.HiddenFor(x => x.InvoicePosition.InvoiceId)
+    @Html.HiddenFor(x => x.InvoicePosition.Id)
+    @Html.HiddenFor(x => x.InvoicePosition.InvoiceId)
 
+    <div class="mb-3">
+        @Html.LabelFor(x => x.InvoicePosition.Lp)
+        @Html.TextBoxFor(x => x.InvoicePosition.Lp,
+       new { @class = "form-control", autofocus = "autofocus" })
+        @Html.ValidationMessageFor(x => x.InvoicePosition.Lp)
+
+    </div>
+
+    <div class="mb-3">
+        @Html.LabelFor(x => x.InvoicePosition.ProductId)
+        @Html.DropDownListFor(x => x.InvoicePosition.ProductId,
+       new SelectList(Model.Products, "Id", "Name"),
+       "-- Wybierz produkt --",
+       new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.InvoicePosition.ProductId)
+    </div>
+
+    <div class="mb-3">
+        @Html.LabelFor(x => x.InvoicePosition.Quantity)
+        @Html.TextBoxFor(x => x.InvoicePosition.Quantity,
+       new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.InvoicePosition.Quantity)
+    </div>
+
+    if (Model.InvoicePosition.Id != 0)
+    {
         <div class="mb-3">
-            @Html.LabelFor(x => x.InvoicePosition.Lp)
-            @Html.TextBoxFor(x => x.InvoicePosition.Lp,
-           new { @class = "form-control", autofocus = "autofocus" })
+            @Html.LabelFor(x => x.InvoicePosition.Value)
+            @Html.TextBoxFor(x => x.InvoicePosition.Value,
+           new { @class = "form-control", @readonly = "readonly" })
         </div>
+    }
 
-        <div class="mb-3">
-            @Html.LabelFor(x => x.InvoicePosition.ProductId)
-            @Html.DropDownListFor(x => x.InvoicePosition.ProductId,
-           new SelectList(Model.Products, "Id", "Name"),
-           "-- Wybierz produkt --",
-           new { @class = "form-control" })
-        </div>
+    <button class="btn btn-primary btn-lg mb-5" type="submit">
+        Zapisz
+    </button>
 
-        <div class="mb-3">
-            @Html.LabelFor(x => x.InvoicePosition.Quantity)
-            @Html.TextBoxFor(x => x.InvoicePosition.Quantity,
-           new { @class = "form-control" })
-        </div>
+}
 
-        if (Model.InvoicePosition.Id != 0)
-        {
-            <div class="mb-3">
-                @Html.LabelFor(x => x.InvoicePosition.Value)
-                @Html.TextBoxFor(x => x.InvoicePosition.Value,
-               new { @class = "form-control", @readonly = "readonly" })
-            </div>
-        }
+@section Scripts
+    {
+    <script type="text/javascript">
 
-        <button class="btn btn-primary btn-lg mb-5" type="submit">
-            Zapisz
-        </button>
-    
+        $(document).ready(function () {
+
+            $.validation.methods.number = function (value, element) {
+                return this.optional(element) || /^-?(?:\d=|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+            }
+
+        });
+
+    </script>
 }
