--- a/InvoiceManager/Views/Home/Invoice.cshtml
+++ b/InvoiceManager/Views/Home/Invoice.cshtml
@@ -116,10 +116,24 @@
     <script type="text/javascript">
 
         function generatePdf() {
-
+              $.ajax({
+                type: "POST",
+                url: "@Url.Action("InvoiceToPdf", "Print")",
+                data: {
+                    id: '@Model.Invoice.Id'
+                },
+                success: function (data) {
+                    window.location = '@Url.Action("DownloadInvoicePdf", "Print")' + '?fileGuid=' + data.FileGuid + '&fileName=' + data.FileName;
+                },
+                error: function (data) {
+                    alert(data.Message);
+                },
+                  datatype: 'json',
+                cache: false
+            });
         }
 
-        function generatePdf() {
+        function printPdf() {
 
         }
 
