Data security + cookies

--- a/InvoiceManager/Views/Home/Invoice.cshtml
+++ b/InvoiceManager/Views/Home/Invoice.cshtml
@@ -26,6 +26,9 @@
     <div class="col-lg-6">
         @using (Html.BeginForm("Invoice", "Home"))
         {
+            @Html.AntiForgeryToken()
+
+
             //@Html.ValidationSummary()
 
             if (Model.Invoice.Id == 0)
