--- a/InvoiceManager/Content/PrintInvoice.css
+++ b/InvoiceManager/Content/PrintInvoice.css
@@ -60,3 +60,11 @@ tr, td, th, thead, thead tr, thead tr th, tfoot {
 th {
     font-weight: normal;
 }
+
+.privacyPoliceInfo{
+    display: none !important;
+}
+
+.privacyPoliceBtn {
+    display: none !important;
+}
