--- a/InvoiceManager/Views/Home/Invoice.cshtml
+++ b/InvoiceManager/Views/Home/Invoice.cshtml
@@ -137,8 +137,10 @@
         }
 
         function printPdf() {
-
+            var pdfWindow = window.open('@Url.Action("PrintInvoicePdf", "Print", new { id = Model.Invoice.Id })', '_blank')
+            pdfWindow.print();
         }
+
 
         function deleteInvoicePosition(id, invoiceId, btn) {
             if (!confirm("Czy na pewno chce usunąć pozycję?"))
