--- a/InvoiceManager/Views/Home/Index.cshtml
+++ b/InvoiceManager/Views/Home/Index.cshtml
@@ -11,11 +11,13 @@
     Dodaj
 </button>
 
-<button class="btn btn-secondary mb-3" onclick='window.location.href="@Url.Action("Clients","Client")"'>
+<button class="btn btn-secondary mb-3" 
+        onclick='window.location.href="@Url.Action("Client","Client")"'>
     Klienci
 </button>
 
-<button class="btn btn-secondary mb-3" onclick='window.location.href="@Url.Action("Products","Product")"'>
+<button class="btn btn-secondary mb-3" 
+        onclick='window.location.href="@Url.Action("Product","Product")"'>
     Produkty
 </button>
 
