--- a/InvoiceManager/Views/Home/Invoice.cshtml
+++ b/InvoiceManager/Views/Home/Invoice.cshtml
@@ -188,7 +188,7 @@
             };
 
             $('#PaymentDate').datepicker({
-                format: "dd-mm-yyyy",
+                format: "dd-MM-yyyy",
                 language: "pl",
                 multidate: false,
                 autoclose: true,
