--- a/InvoiceManager/Views/Client/Client.cshtml
+++ b/InvoiceManager/Views/Client/Client.cshtml
@@ -7,10 +7,10 @@
 
 <h1>@ViewBag.Title</h1>
 
-<button class="btn btn-primary mb-3"
-        onclick='window.location.href="@Url.Action("InvoicePosition","Home", new {})"'>
-    Dodaj pozycję
-</button>
+@*<button class="btn btn-primary mb-3"
+        onclick='window.location.href="@Url.Action("Edit","Client", new {})"'>
+    Dodaj
+</button>*@
 
 @if (Model != null && Model.Any())
 {
