--- a/InvoiceManager/Views/Home/InvoicePosition.cshtml
+++ b/InvoiceManager/Views/Home/InvoicePosition.cshtml
@@ -66,7 +66,7 @@
 
         $(document).ready(function () {
 
-            $.validation.methods.number = function (value, element) {
+            $.validatior.methods.number = function (value, element) {
                 return this.optional(element) || /^-?(?:\d=|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
             }
 
