--- a/InvoiceManager/Views/Product/ProductForm.cshtml
+++ b/InvoiceManager/Views/Product/ProductForm.cshtml
@@ -11,21 +11,15 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="row">
-    <div class="col-lg-6">
-        @using (Html.BeginForm("Product", "Product"))
-        {
-            //@Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-lg-6">
 
-
-            //@Html.ValidationSummary()
-
-            if (Model.Product.Id == 0)
+            @if (Model.Product.Id == 0)
             {
-                <p class="alert alert-info mt-4 mb-4">
-                    Pola Nazwa produktu oraz Wartość produktu są
-                    <strong>wymagane</strong>.
-                </p>
+            <p class="alert alert-info mt-4 mb-4">
+                Pola Nazwa produktu oraz Wartość produktu są
+                <strong>wymagane</strong>.
+            </p>
             }
 
             @Html.HiddenFor(x => x.Product.Id)
@@ -40,16 +34,31 @@
 
             <div class="mb-3">
                 @Html.LabelFor(x => x.Product.Value)
-                @Html.TextBoxFor(x => x.Product.Value,
-               new { @class = "form-control", autofocus = "autofocus" })
+                <input type="number" step="any" class="form-control" name="Product.Value" value="@Model.Product.Value" />
                 @Html.ValidationMessageFor(x => x.Product.Value)
             </div>
-    
+
+
             <button class="btn btn-primary btn-lg mb-5" type="submit">
                 Zapisz
             </button>
 
-        }
+
+        </div>
     </div>
-</div>
+}
+
+@section Scripts
+{
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+
+            $.validator.methods.number = function (value, element) {
+                return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+            }
+
+        });
+
+    </script>
 }
